jjb: Adds jtsync to the openstack-templates.
Signed-off-by: Jürgen Löhel <jloehel@suse.com>

--- a/jenkins/ci.opensuse.org/openstack-repocheck.yaml
+++ b/jenkins/ci.opensuse.org/openstack-repocheck.yaml
@@ -59,6 +59,17 @@
           # zypper in osc obs-service-tar_scm obs-service-github_tarballs obs-service-recompress obs-service-git_tarballs obs-service-set_version
           [ -z "$PROJECTSOURCE" ] && ( echo "Error: no PROJECTSOURCE defined." ; exit 1 )
 
+          export automationrepo=~/github.com/SUSE-Cloud/automation
+          export jtsync=${automationrepo}/scripts/jtsync/jtsync.rb
+          main_job_name=${JOB_NAME%%/*}
+
+          function jtsync_trap() {
+            $jtsync -ci opensuse --matrix ${main_job_name},${project},${BUILD_NUMBER} 1
+          }
+
+          if [[ ${ROOT_BUILD_CAUSE} != "MANUALTRIGGER" ]]; then
+            trap jtsync_trap EXIT ERR
+          fi
 
           DIST_NAME=$(echo $repository|cut -d "_" -f 1)
           DIST_VERSION=$(echo $repository|cut -d "_" -f 2-)
@@ -109,3 +120,11 @@
 
           test -e ~/repo || { echo "~/repo needs to have a copy of pre-generated .solv files from internal media" ; exit 55; }
           installcheck $ARCH --withobsoletes --exclude "-kmp-" tmp/repo/primary.xml.gz  --nocheck $EXTRA_NOCHECK ~/repo/${repository}-${ARCH}.solv
+          ret=$?
+
+          # only enable jtsync when build is not manually triggered
+          if [[ ${ROOT_BUILD_CAUSE} != "MANUALTRIGGER" ]]; then
+            trap - EXIT ERR
+            $jtsync --ci opensuse --matrix ${main_job_name},${project},${BUILD_NUMBER} $ret || :
+          fi
+          exit $ret
