jjb: Adds comments with some information about the workaround to retrieve the real JOB_BASE_NAME.
Signed-off-by: Jürgen Löhel <jloehel@suse.com>

--- a/jenkins/ci.suse.de/cloud-mediacheck.yaml
+++ b/jenkins/ci.suse.de/cloud-mediacheck.yaml
@@ -41,6 +41,12 @@
       - shell: |
           export automationrepo=~/github.com/SUSE-Cloud/automation
           export jtsync=${automationrepo}/scripts/jtsync/jtsync.rb
+          
+          # Workaround to get only the name of the job:
+          # https://issues.jenkins-ci.org/browse/JENKINS-39189
+          # When the JOB_BASE_NAME contains only in ex. "cloud-mediacheck", this
+          # workaround can be removed.
+          echo "$JOB_BASE_NAME"
           main_job_name=${JOB_NAME%%/*}
 
           # automation bootstrapping
