--- a/jenkins/ci.opensuse.org/openstack-trackupstream.yaml
+++ b/jenkins/ci.opensuse.org/openstack-trackupstream.yaml
@@ -119,6 +119,12 @@
 
           export automationrepo=~/github.com/SUSE-Cloud/automation
           export jtsync=${automationrepo}/scripts/jtsync/jtsync.rb
+          
+          # Workaround to get only the name of the job:
+          # https://issues.jenkins-ci.org/browse/JENKINS-39189
+          # When the JOB_BASE_NAME contains only in ex. "openstack-trackupstream", this
+          # workaround can be removed.
+          echo "$JOB_BASE_NAME"
           main_job_name=${JOB_NAME%%/*}
 
           function jtsync_trap() {
